--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ multidict==6.2.0
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 numpy==2.2.4
+ollama==0.4.7
 openai==1.68.0
 orjson==3.10.15
 packaging==24.2
