Remove all counters, and fix dual WA

--- a/config.toml
+++ b/config.toml
@@ -5,8 +5,8 @@ SEND_URL = 'http://192.168.30.50:8000/send'
 [CONFIG]
 LOGDIR = './log/'
 TOKEN_LIMIT = 1000
-BOT_NUMBER = "628984633949@c.us"
-ADMIN_NUMBER = ["62895352277562@c.us",
+BOT_NUMBER = ["628984633949@c.us", "201610747732180@lid"]
+ADMIN_NUMBER = ["62895352277562@c.us", "280109261054115@lid",
 "120363149813038443@g.us"]
 MAX_TOKEN = 4192
 WORD_LIMIT = 1000
